python基础/shell 测试 torch.txt
"""
(base) C:\Users\pprp>python
Python 3.7.3 (default, Mar 27 2019, 17:13:21) [MSC v.1915 64 bit (AMD64)] :: Anaconda, Inc. on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import numpy as np
>>> grid = np.arange(13)
>>> gird
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'gird' is not defined
>>> grid
array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12])
>>> a,b = np.meshgrid(grid,grid)
>>> a
array([[ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12],
       [ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12]])
>>> b
array([[ 0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0,  0],
       [ 1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1,  1],
       [ 2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2,  2],
       [ 3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3,  3],
       [ 4,  4,  4,  4,  4,  4,  4,  4,  4,  4,  4,  4,  4],
       [ 5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5,  5],
       [ 6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6,  6],
       [ 7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7,  7],
       [ 8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8,  8],
       [ 9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9,  9],
       [10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10, 10],
       [11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11, 11],
       [12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12, 12]])
>>> import torch
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'torch'
>>>
KeyboardInterrupt
>>> ^Z


(base) C:\Users\pprp>conda activate pytorch

(pytorch) C:\Users\pprp>python
Python 3.7.3 (default, Apr 24 2019, 15:29:51) [MSC v.1915 64 bit (AMD64)] :: Anaconda, Inc. on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> import torch
>>> import numpy as np
>>> grid = np.arange(3)
>>> a,b = np.meshgrid(grid, grid)
>>> a,b
(array([[0, 1, 2],
       [0, 1, 2],
       [0, 1, 2]]), array([[0, 0, 0],
       [1, 1, 1],
       [2, 2, 2]]))
>>> a
array([[0, 1, 2],
       [0, 1, 2],
       [0, 1, 2]])
>>> b
array([[0, 0, 0],
       [1, 1, 1],
       [2, 2, 2]])
>>> x_offset = torch.FloatTensor(a).view(-1,1)
>>> x_offset
tensor([[0.],
        [1.],
        [2.],
        [0.],
        [1.],
        [2.],
        [0.],
        [1.],
        [2.]])
>>> y_offset = torch.FloatTensor(b).view(-1,1)
>>> y_offset
tensor([[0.],
        [0.],
        [0.],
        [1.],
        [1.],
        [1.],
        [2.],
        [2.],
        [2.]])
>>> x_y_offset = torch.cat((x_offset, y_offset), 1).repeat(1,num_anchors).view(-1,2).unsqueeze(0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'num_anchors' is not defined
>>> x_y_offset = torch.cat((x_offset, y_offset), 1).repeat(1,3).view(-1,2).unsqueeze(0)
>>> x_y_offset
tensor([[[0., 0.],
         [0., 0.],
         [0., 0.],
         [1., 0.],
         [1., 0.],
         [1., 0.],
         [2., 0.],
         [2., 0.],
         [2., 0.],
         [0., 1.],
         [0., 1.],
         [0., 1.],
         [1., 1.],
         [1., 1.],
         [1., 1.],
         [2., 1.],
         [2., 1.],
         [2., 1.],
         [0., 2.],
         [0., 2.],
         [0., 2.],
         [1., 2.],
         [1., 2.],
         [1., 2.],
         [2., 2.],
         [2., 2.],
         [2., 2.]]])
>>> anchors = [[8,8],[16,16],[32,32]]
>>> anchors.size()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'size'
>>> anchors.size
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'size'
>>> anchors.shape
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
AttributeError: 'list' object has no attribute 'shape'
>>> size(anchors)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'size' is not defined
>>> anchors
[[8, 8], [16, 16], [32, 32]]
>>> anchors[0]
[8, 8]
>>>     anchors = torch.FloatTensor(anchors)
  File "<stdin>", line 1
    anchors = torch.FloatTensor(anchors)
    ^
IndentationError: unexpected indent
>>> anchors = torch.FloatTensor(anchors)
>>> anchors
tensor([[ 8.,  8.],
        [16., 16.],
        [32., 32.]])
>>> anchors.size()
torch.Size([3, 2])
>>> len(anchors)
3
>>> anchors = anchors.repeat(grid_size*grid_size, 1).unsqueeze(0)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'grid_size' is not defined
>>> anchors = anchors.repeat(13*13, 1).unsqueeze(0)
>>> anchors.size()
torch.Size([1, 507, 2])
>>>
"""